# procnotify

./: .env.example  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: build.yml
src/: errors.rs  main.rs  process.rs
