[package]
name = "procnotify"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-log = "0.2"
sysinfo = "0.37.2"
clap = { version = "4.5.49", features = ["derive", "env"] }
lettre = { version = "0.11.19", features = ["builder", "hostname", "pool", "smtp-transport", "rustls-native-certs", "rustls-tls"], default-features = false }
nix = { version = "0.30.1", features = ["process", "ptrace", "signal"] }
libc = "0.2"
lazy_static = "1.4.0"
thiserror = "2.0.17"
dotenvy = "0.15.7"
hostname = "0.4.2"
chrono = "0.4.42"

[target.'cfg(any(target_os = "macos", target_os = "freebsd", target_os = "netbsd", target_os = "openbsd"))'.dependencies]
kqueue = "1.1.1"

[target.'cfg(target_os = "linux")'.dependencies]
cnproc = { git = "https://github.com/hut8/cnproc-rs.git", branch = "main" }
